# ml_ci_cd

./: .bandit  .gitignore  .pre-commit-config.yaml  DATA_SETUP_SUMMARY.md  DOCKER_ORCHESTRATION.md  DOCUMENTATION_HANDOFF.md  MLFLOW_GUIDE.md  MLFLOW_IMPLEMENTATION_SUMMARY.md  Makefile  PRODUCTION_DEPLOYMENT.md  README.md  TESTING.md  TRAINING_PIPELINE.md  docker-compose.yaml  dvc.yaml  mkdocs.yml  mlflow.db  mlflow_server.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  run_quality_gates.py  setup_env.sh
.dvc/: config
.github/workflows/: ci.yml  deploy.yml  train.yml
config/: .env.mlflow  .env.mlflow.prod
data/: .gitkeep
data/raw/: code_review_dataset.json.dvc  codesearchnet_dataset.json.dvc  codesearchnet_dataset_clean.json.dvc
docker/: Dockerfile  README.md  docker-compose.yml  serve.Dockerfile  train.Dockerfile
docker/nginx/: nginx.conf
docker/prometheus/: prometheus.yml
docs/: index.md
docs/adr/: 001-framework-choice.md  002-containerization-strategy.md  003-cicd-tooling.md  004-cloud-provider.md  index.md
docs/aws/: infrastructure.md
docs/getting-started/: quickstart.md
infra/: backend.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
lambda/: data_drift_detector.py
scripts/: build_docker.sh  compare_and_promote_models.py  demo.sh  docker_examples.sh  get_mlflow_model.py  register_mlflow_model.py  train.sh  verify_mlflow_artifacts.py
src/: __init__.py
tests/: __init__.py  test_api.py  test_basic.py  test_data_preparation.py  test_integration.py  test_mlflow_model.py  test_training.py
(+39 files in other folders)
