[tool.poetry]
name = "ml_ci_cd"
version = "0.1.0"
description = "ML CI/CD Pipeline Project"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "*"
transformers = "^4.30.0"
mlflow = "^2.0.0"
dvc = "^3.0.0"
fastapi = "^0.100.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
boto3 = "^1.26.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
isort = "^5.12.0"
pre-commit = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
